2001-07-02  Oliver Kiddle  <opk@zsh.org>

	* 15204: zshconfig.ac, Src/compat.c, Src/params.c: fix compilation
	problems on IRIX 5.2 and correct error messages

2001-07-02  Bart Schaefer  <schaefer@zsh.org>

	* 15198: Completion/Zsh/Context/_tilde: Return nonzero if no
	matches are found.

2001-06-30  Bart Schaefer  <schaefer@zsh.org>

	* 15191: Src/init.c: Don't infinite loop if there's an error in
	the user's precmd -- reset errflag after preprompt().

2001-06-29  Andrej Borsenkow  <bor@zsh.org>

	* 15183: zshconfig.ac: fix DLLD in non-ELF case

	* 15181: zshconfig.ac: use -KPIC instead of -Kpic at request
	of Tomi Vainio <Tomi.Vainio@Sun.COM>

	* 15180: zshconfig.ac, Etc/MACHINES: make AIX default to termcap
	as workaround for apparent AIX curses bug; add flags to create
	modules with shared object type. Mention curses problem.

2001-06-29  Clint Adams  <clint@zsh.org>

	* Bart: 15083 plus comments: Functions/Zle/bash-backward-kill-word:
	bash-style backward-kill-word function.

2001-06-28  Wayne Davison  <wayned@users.sourceforge.net>

	* 15172: Src/hist.c: Have prepnexthistent() remove any HIST_TEMPSTORE
	entry that is present.

2001-06-28  Peter Stephenson  <pws@csr.com>

	* 15169: README, Doc/zman.yo, Doc/ztexi.yo, Doc/Zsh/manual.yo:
	handle top node in a way texinfo 4.0 likes better.  May require
	upgrading texinfo.

	* 15160 and Andrej zsh-users/3973: Doc/Makefile.in: install
	zsh.html if generated.

2001-06-28  Oliver Kiddle  <opk@zsh.org>

	* unposted: Etc/zsh-development-guide, Test/B01cd.ztst: fix typos

	* 15159: Completion/X/Command/_vnc: fix for two digit display numbers,
	use _values for -encodings option and complete for xvncviewer

2001-06-28  Sven Wischnowsky  <wischnow@zsh.org>

	* Bart: 15106, small changes in 15152: Completion/Zsh/Command/_cd,
	Completion/Zsh/Context/_tilde: Improve completion for `cd' with
	cdablevars set; cleanup in _cd and _tilde

2001-06-27  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
