@@ -475,7 +475,7 @@ AC_CHECK_HEADERS(sys/time.h sys/times.h sys/select.h termcap.h termio.h \
 		 limits.h fcntl.h libc.h sys/utsname.h sys/resource.h \
 		 locale.h errno.h stdlib.h unistd.h sys/capability.h \
 		 utmp.h utmpx.h sys/types.h pwd.h grp.h poll.h sys/mman.h \
-		 netinet/in_systm.h)
+		 netinet/in_systm.h, pcre.h)
 if test $dynamic = yes; then
   AC_CHECK_HEADERS(dlfcn.h)
   AC_CHECK_HEADERS(dl.h)
@@ -642,6 +642,9 @@ fi
 AC_CHECK_LIB(cap, cap_get_proc)
 
 AC_CHECK_LIB(socket, socket)
+
+dnl pcre-config should probably be employed here
+AC_CHECK_LIB(pcre, pcre_compile)
 
 dnl ---------------------
 dnl CHECK TERMCAP LIBRARY
@@ -933,7 +936,8 @@ AC_CHECK_FUNCS(strftime difftime gettimeofday \
 	       putenv getenv \
 	       brk sbrk \
 	       pathconf sysconf \
-	       tgetent tigetflag tigetnum tigetstr setupterm)
+	       tgetent tigetflag tigetnum tigetstr setupterm \
+	       pcre_compile pcre_study pcre_exec)
 AC_FUNC_STRCOLL
 
 dnl  Check if tgetent accepts NULL (and will allocate its own termcap buffer)
