@@ -1,3 +1,9 @@
+2001-07-02  Clint Adams  <clint@zsh.org>
+
+	* 15211: zshconfig.ac, Doc/Zsh/mod_pcre.yo,
+	Functions/Example/zpgrep, Src/Modules/pcre.c,
+	Src/Modules/pcre.mdd: interface to PCRE library.
+
 2001-07-02  Oliver Kiddle  <opk@zsh.org>
 
 	* 15204: zshconfig.ac, Src/compat.c, Src/params.c: fix compilation
